--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fullscreen Scroll</title>
+        <title>Right now</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
             <div class="slides slide1">
                 <img src="images/pic-1.png" alt="Mike">
-                <h2>Hello, I'm a computer programmer.</h2>
+                <h2>I'm a computer programmer.</h2>
             </div>
 
             <div class="slides slide2">
