Additional information to the readers
Placed the company and facility which help us make the project alive.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="slides slide2">
                 <img src="images/pic-2.png" alt="Mike">
-                <h2>Working at Samar Island GIS and Analytics Center.</h2>
+                <h2>Working at Samar Island GIS and Analytics Center - SSU.</h2>
             </div>
 
             <div class="slides slide3">
